--- a/public/css/style.css
+++ b/public/css/style.css
@@ -517,10 +517,11 @@ p span{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    background-color: black;
-    border: 2px solid #ffff;
-    cursor: pointer;
     color: white;
+    background-color: black;
+    border: 2px solid black;
+    cursor: pointer;
+
 }
 .product-content-right-proButton .buy:hover{
     background-color: white;
